# lissabon

./: .travis.yml  AbstractDimmer.cpp  AbstractDimmer.h  BLEDimmer.cpp  BLEDimmer.h  CLAUDE.md  DimmerBLEServer.cpp  DimmerBLEServer.h  DimmerUI.cpp  DimmerUI.h  LedstripDimmer.cpp  LedstripDimmer.h  LissabonBLE.cpp  LissabonBLE.h  PWMDimmer.cpp  PWMDimmer.h  README.md  iotsaBLEClient.cpp  iotsaBLEClient.h  iotsaBLEClientConnection.cpp  iotsaBLEDimmer.ino  iotsaLedstrip.ino  iotsaPixelstrip.cpp  iotsaPixelstrip.h  iotsaTouch.cpp  iotsaTouch.h  lissabonLedstrip.ino  lissabonRemote.ino  mainBLEDimmer.cpp  mainDimmer.cpp  mainLedstrip.cpp  platformio.ini  readme.md
python/: README.md  create-venv.sh  pyproject.toml  requirements.txt
python/lissabonCalibrate/: __main__.py  calibrator.py  colorconvert.py  colorplot.py  colourscience_cc.py  common.py  ledstrip.py  plot.py  sensor.py
python/sandbox/: 2-striprechts-lux.csv  3-striprechts-lux-native.csv  3-striprechts-lux.csv  3a-command.sh  3a-striprechts-lux-native.csv  3a-striprechts-lux.csv  3b-striplinks-lux-native.csv  VEML6040 spectrum data.xlsx  leds-striplinks.csv  lissabon_cct_045.csv  lissabon_cscct_045.csv  lissabon_lux_045_13.csv  rgbw_led_spectrum.py  stripbank-cct.csv  stripbank-lux.csv  stripkeuken-cct-direct.csv  stripkeuken-cct.csv  stripkeuken-lux-direct.csv  striprechts-cct-gamma07.csv  striprechts-cct-gamma14.csv  striprechts-cct-gamma22.csv  striprechts-cct.csv  striprechts-lux-daylight.csv  striprechts-lux-rgb3600.csv  striprechts-lux.csv  testcct.csv  testcct_g045.csv  testcct_g22.csv  testlux.csv  (+2 more)
(+116 files in other folders)
