[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "lissabonCalibrate"
version = "0.0.1"
authors = [
  { name="Jack Jansen", email="Jack.Jansen@cwi.nl" },
]
description = "Calibration tool for Lissabon ledstrips"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "iotsa",
  "matplotlib",
  "colour-science",
  "colour-science[plotting]",
  "colour-science[optional]"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools]
packages = ["lissabonCalibrate"]
[project.urls]
"Homepage" = "https://github.com/dis-git/lissabon"
"Bug Tracker" = "https://github.com/dis-git/lissabon/issues"